--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-test.
-
-git
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>New World</title>
+</head>
+<body>
+  <h1>Welcome to a New World</h1>
+  <p>A promising land awaits</p>
+</body>
+</html>
