--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
   <h1>Welcome to a New World</h1>
   <p>A promising land awaits</p>
-  <img src="" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="25" />
 </body>
 </html>
