--- a/About me.html
+++ b/About me.html
@@ -3,8 +3,8 @@
   <title>About me</title>
 </head>
 <body>
-  <h1>Welcome to a New World</h1>
-  <p>ccording to all known laws
+  <a href="./index.html">Return</a>
+  <p>According to all known laws
 of aviation,
 
   
@@ -4567,6 +4567,6 @@ Wrap it up, guys.
   
 I had virtually no rehearsal for that.
 </p>
-  <img "https://cdn.drawception.com/images/panels/2017/3-13/6xWzRG9Bdz-2.png" width="250" />
+  <img src="https://cdn.drawception.com/images/panels/2017/3-13/6xWzRG9Bdz-2.png" width="250" />
 </body>
 </html>
