--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <h1>Welcome to a New World</h1>
   <p>A promising land awaits</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="250" />
-   <p>Click here to learn my deepest, darkest secret</p>
-  <a href="./About me.html">Secret</a>
+   <a href="./About me.html">Click here to learn my Deepest, Darkest secret</a>
 </body>
 </html>
