--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New World</title>
+<style>
+  #header {
+    color:red;
+  }
+</style>
 </head>
 <body>
-  <h1>Welcome to a New World</h1>
+  <h1 id="header">Welcome to a New World</h1>
   <p>A promising land awaits</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="250" />
   
