--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="250" />
   
    <a href="./About me.html">Click here to learn my Deepest Darkest secret</a>
+  <p>A list of my favourite things</p>
+  <ol>
+    <li>This</li>
+    <li>That</li>
+    <li>Those</li>
+  </ol>
 </body>
 </html>
