--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
   <title>New World</title>
 <style>
   #header {
     color:red;
   }
-  <body style="background-color:#33475b">
+ 
 </style>
 </head>
-<body>
+<body bgcolor="blue">
   <h1 id="header">Welcome to a New World</h1>
   <p>A promising land awaits</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="250" />
