--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
 </style>
 </head>
-<body bgcolor="light blue">
+<body bgcolor="grey">
   <h1 id="header">Welcome to a New World</h1>
   <p>A promising land awaits</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Map_of_the_New_World_Wellcome_L0064140.jpg" width="250" />
